k8/testing-ingress/test2/whoami.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami2
  namespace: ingresstest
  labels:
    app: whoami2

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami2
  template:
    metadata:
      labels:
        app: whoami2
    spec:
      containers:
        - name: whoami2
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
