k8/testing-ingress/test2/whoami-service.yaml


apiVersion: v1
kind: Service
metadata:
  name: whoami2
  namespace: ingresstest
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami2
