k8/testing-ingress/test2/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress2
  namespace: ingresstest
  annotations:
    kubernetes.io/ingress.class: "traefik"

spec:
  rules:
  - host: lb.com
  - http:
      paths:
      - path: /web2
        pathType: Prefix
        backend:
          service:
            name: whoami2
            port:
              name: web
